...
                        </view>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="courseCell" rowHeight="120" id="3h6-wx-7oe" customClass="CoursesTableViewCell" customModule="Notebowl_Mobile" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="28" width="414" height="120"/>
                                <autoresizingMask key="autoresizingMask"/>
...
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="courseTableView"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Notifications" id="Z04-Zo-9l3">
                        <barButtonItem key="rightBarButtonItem" title="Profile" image="happy-vector" style="plain" id="agi-BX-OGO">
                            <connections>
...
                            <tableViewSection headerTitle="Notifications" id="EDd-Yy-yoc">
                                <cells>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="pushSettingsCell" textLabel="GlF-3w-wd4" rowHeight="50" style="IBUITableViewCellStyleDefault" id="ecg-oP-24D">
                                        <rect key="frame" x="0.0" y="291" width="414" height="50"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                                    <rect key="frame" x="20" y="0.0" width="356" height="49.666666666666664"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="pushSettingsLabel"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <color key="textColor" name="Backdrop Color"/>
...
                        <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="pushTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
        <scene sceneID="ite-OS-Tnq">
            <objects>
                <navigationController title="Profile Nav Controller" extendedLayoutIncludesOpaqueBars="YES" id="h5w-W2-6Qi" customClass="RootNavigationBarVC" customModule="Notebowl_Mobile" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Bulletin" image="today_apps-vector" id="Lho-Gi-jfY">
                        <userDefinedRuntimeAttributes>
...
                                <color key="sectionIndexColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="bulletinTableView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                        <barButtonItem key="rightBarButtonItem" title="Profile" image="happy-vector" id="YSv-Aa-2vd">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="homeProfileButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
            <objects>
                <navigationController title="Courses Nav Controller" id="HSI-fu-8pP" customClass="RootNavigationBarVC" customModule="Notebowl_Mobile" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Courses" image="book-vector" id="GaJ-TT-zS9">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="coursesTab"/>
...
